Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54453

QtCompositor: When forwarding touch events to clients, mouse events are not working reliable anymore in the compositor UI

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.7.1
    • 5.7.0
    • QPA: Wayland
    • None
    • Intel-NUC + USB Touchscreen

      Attached example is based on the pure-qml compositor and extends it, by adding a button to the background and set touchEventsEnabled to true for the connected shell surfaces.

      When multiflame.qml is used as a client, the touch events are forwarded and it works as expected, but aftwards when pressing the "green" button in the compositor api, will change to "red' to indicate that it is pressed, but never changes back to "green"

      1. Launch modified compositor
      2. Test that green button works as expected (changes to red)
      3. launch multiflame as a wayland client
      4. Do a two finger press (fast) in the multiflame window and verify that it renders two flames.
      5. Press the green button again and see that's it's still red after releasing the finger

        1. multitouch-bug.tar.gz
          651 kB
          Dominik Holland
        2. qtbug-54453-compositor.qml
          0.9 kB
          Johan Helsing
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            johanhelsing Johan Helsing
            gagi Dominik Holland
            Votes:
            1 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes