Add missing mouse ungrab when touch ends

Task-number: QTBUG-54453
Change-Id: Ie8fadd89797cd7c9ff5bf00924706bd662bbd22d
Reviewed-by: Giulio Camuffo <giulio.camuffo@kdab.com>
Reviewed-by: Dominik Holland <dominik.holland@pelagicore.com>